# applications_dlp_manager

./: @ohos.dlpPermission.d.ts  BUILD.gn  OAT.xml  README.md  README_zh.md  build-profile.json5  bundle.json  coverage-filter.json5  hvigorw  hvigorw.bat  oh-package-lock.json5  oh-package.json5  package-lock.json  package.json  publicity.xml
AppScope/: app.json  app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/profile/: configuration.json
AppScope/resources/zh_CN/element/: string.json
entry/: build-profile.json5  obfuscation-rules.txt
entry/src/main/: module.json  module.json5
entry/src/main/ets/Ability/: ClearDlpCacheAbility.ets  DataAbility.ets  DialogUIExtAbility.ets  DlpFileProcessAbility.ets  EncryptedSharingAbility.ets  MainAbilityEx.ets  OpeningDialogUIExtAbility.ets  PhoneDialogUIExtAbility.ets  SaveAsAbility.ets  ViewAbility.ets
entry/src/main/ets/AlertAbility/: AlertAbility.ets  AlertAbility.ts
entry/src/main/ets/Application/: AbilityStage.ets  AbilityStage.ts
entry/src/main/ets/DataAbility/: DataAbility.ets  DataAbility.ts
entry/src/main/ets/DialogUIExtAbility/: DialogUIExtAbility.ets
entry/src/main/ets/EncryptedSharingAbility/: EncryptedSharingAbility.ets
entry/src/main/ets/MainAbility/: MainAbility.ets  MainAbility.ts  MainAbilityEx.ets
entry/src/main/ets/OpenDlpFile/: DlpFileOpenReport.ets  FileDecryptionManager.ets  TerminateView.ets  ViewProcessor.ets
entry/src/main/ets/SaveAsAbility/: SaveAsAbility.ets  SaveAsAbility.ts
entry/src/main/ets/ViewAbility/: ViewAbility.ets  ViewAbility.ts
entry/src/main/ets/cleanDlpCache/: cleanDlpFileInCache.ets
entry/src/main/ets/common/: AccountAssociationUtil.ets  AccountTipsConfig.ets  AppStorageConstant.ets  AppStorageMgr.ets  CommonEventManager.ets  CommonUtil.ts  CounterLock.ets  DataUtils.ets  FileUtils.ets  FontSizeScale.ts  GetAlertMessage.ets  GlobalContext.ets  GlobalContext.ts  HiLog.ts  ObjectUtil.ts  ReportSecurityEventUtil.ets  ReportToBigDataUtil.ets  Result.ets  ResultMsg.ets  Singleton.ets  Singleton.ts  StorageUtil.ets  StorageUtil.ts  SupportTypesConfig.ets  UIContextUtil.ets  constant.ets  dlpClass.ets  systemUtils.ets  utils.ets
entry/src/main/ets/component/: AccountTipsConfig.ets
entry/src/main/ets/convertor/: AccountAssociationConvertor.ets  AccountAssociationConvertor.ts  DomainAccountConvertor.ts
entry/src/main/ets/feature/: HomeFeature.ets
entry/src/main/ets/manager/: AccountAssociationManager.ets  AccountManager.ets
entry/src/main/ets/pages/: OpeningDialog.ets  PhoneDialog.ets  alert.ets  alertMessage.ets  changeEncryption.ets  encryptedSharing.ets  encryptionProtection.ets  encryptionSuccess.ets  index.ets  permissionStatus.ets  saveAs.ets
entry/src/main/ets/rpc/: ConnectService.ets  CredCallback.ets  CredCallbackStub.ets  CredConnectService.ets  CredConnectServiceDomain.ets  CredConnectServiceFileId.ets  CredConnection.ets  DlpPermissionAbilityServiceStub.ets  OpeningDialogService.ets  OpeningDialogStub.ets  ViewAbilityService.ets  ViewAbilityStub.ets
entry/src/main/ets/service/: AccountAssociationService.ets
entry/src/main/ets/serviceExtensionAbility/: ServiceExtAbility.ets
entry/src/ohosTest/: module.json5
hvigor/: hvigor-config.json5
patches/: patches.json
signature/: dlpm.gni  dlpmanager.p7b  hmos_dlpmanager.p7b
(+153 files in other folders)
