# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("signature/dlpm.gni")

ohos_hap("dlp_manager") {
  hap_profile = "entry/src/main/module.json"
  deps = [
    ":dlp_manager_js_assets",
    ":dlp_manager_resources",
  ]
  js_build_mode = "debug"
  certificate_profile = "signature/dlpmanager.p7b"
  hap_name = "dlp_manager"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
  module_install_dir = "app/com.ohos.dlpmanager"
  if (defined(sign_hap_py_path)) {
    certificate_profile = "${certificate_profile_path}"
    key_alias = "dlpmanager"
    compatible_version = "9"
  }
}

ohos_app_scope("dlp_manager_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_js_assets("dlp_manager_js_assets") {
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_resources("dlp_manager_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":dlp_manager_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
